need to fix card overlap

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,80 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    body {
+        @apply text-gray-800;
+    }
+}
+
+@layer components {
+    .container {
+        @apply max-w-none w-auto;
+        .container {
+            min-height: 100vh;
+            display: grid;
+            grid-template-rows: auto 1fr auto;
+
+        }
+
+
+    }
+    .main {
+        padding: 2rem;
+    }
+    footer {
+        @apply py-6 px-8 bg-blue-100;
+    }
+
+
+}
+
+
+
+/* Header one */
+
+@layer components {
+    header {
+        @apply bg-white py-5 px-6;
+    }
+    ul {
+        @apply text-center -mx-5 md:mx-0;
+    }
+    ul li {
+        @apply inline-block mx-5;
+    }
+    .btn {
+        @apply bg-blue-500 text-white py-2 px-5 rounded-full;
+    }
+}
+
+/* Card Container  */
+@layer base {
+    body {
+        @apply bg-gray-100 text-gray-800;
+    }
+}
+
+@layer components {
+    .container {
+        @apply max-w-7xl mx-auto p-8;
+    }
+    h2 {
+        @apply font-bold text-2xl;
+    }
+    .item {
+        @apply bg-white rounded-lg;
+    }
+    .item img {
+        @apply w-full h-48 object-cover rounded-t-lg;
+    }
+    .item > div {
+        @apply p-6;
+    }
+    p {
+        @apply mt-4 mb-3;
+    }
+    a {
+        @apply text-lg font-bold text-purple-600;
+    }
+}
